tests/should_fail/lone_else.nds
-- `else` with no preceding `if`.
else
    set x to 1
end if
